Started designingt tooltips

--- a/Frontend/profile-settings/profile-settings.html
+++ b/Frontend/profile-settings/profile-settings.html
@@ -33,7 +33,12 @@
             <label for="darkmode" class="switch-container">
                 <input type="checkbox" id="darkmode" name="darkmode" checked="">
                 <span class="switch"></span>
-                <span class="text">Darkmode</span>
+                <span class="text">Dunkler Modus</span>
+            </label>
+            <label for="table-optimization" class="switch-container">
+                <input type="checkbox" id="table-optimization" name="table-optimization" checked="">
+                <span class="switch"></span>
+                <span class="text">Smartphone-optimierte Tabellen Darstellung</span>
             </label>
 
         </div>
