--- a/Frontend/tooltip/tooltip.html
+++ b/Frontend/tooltip/tooltip.html
@@ -9,12 +9,16 @@
     <title>Mail</title>
 
     <link rel="stylesheet" href="css/normalize.css" type="text/css" />
+    <link rel="stylesheet" href="css/tippy.css" type="text/css" />
+    <link rel="stylesheet" href="css/svg-arrow.css" type="text/css" />
     <link rel="stylesheet" href="css/tooltip.css" type="text/css" />
 
     <!--[if lt IE 9]>
     <script src="/SV-Tora/js/html5shiv.js"></script>
     <![endif]-->
 
+    <script src="js/popper.min.js"></script>
+    <script src="js/tippy.umd.js"></script>
     <script src="js/tooltip.js"></script>
     <!--
 
@@ -27,10 +31,7 @@
 
     <p>
         Dies ist eine Information.
-        <span class="tt-container">
-            <span class="tt-trigger"><i class="material-icons">help_outline</i></span>
-            <span class="tooltip">Dies ist ein Tipp</span>
-        </span>
+        <span class="tt-trigger"><i class="material-icons">help_outline</i></span>
     </p>
 
 </body>
