--- a/Frontend/notification/notification.html
+++ b/Frontend/notification/notification.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
 
-    <title>Landing-Page</title>
+    <title>Notification</title>
 
     <link rel="stylesheet" href="css/normalize.css" type="text/css" />
     <link rel="stylesheet" href="css/notification.css" type="text/css" />
