--- a/Frontend/accordion/accordion.html
+++ b/Frontend/accordion/accordion.html
@@ -6,17 +6,16 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
 
-    <title>Fighting-System</title>
+    <title>Accordion</title>
 
     <link rel="stylesheet" href="css/normalize.css" type="text/css" />
-    <link rel="stylesheet" href="css/fighting-system.css" type="text/css" />
+    <link rel="stylesheet" href="css/accordion.css" type="text/css" />
 
     <!--[if lt IE 9]>
     <script src="/SV-Tora/js/html5shiv.js"></script>
     <![endif]-->
 
-    <script src="js/embla-carousel.js"></script>
-    <script src="js/fighting-system.js"></script>
+    <script src="js/accordion.js"></script>
 
     <!--
 
@@ -27,18 +26,20 @@
 </head>
 <body class="darkmode">
 
-    <h1 class="starter-team">Starter</h1>
-
     <main>
+        <h1 class="starter-team">Starter</h1>
         <h3>Kata</h3>
         <div class="accordion">
             <div class="accordion-bar">
-                <div class="accordion-header clearfix">
+                <div class="bar-header clearfix">
                     <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">Kategorie: <span class="category-name">1a</span></h4>
-                    <h4 class="category-properties"><span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span></h4>
+                    <h4 class="category">
+                        Kategorie:
+                        <span class="category-name">1a</span>
+                        <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
+                    </h4>
                 </div>
-                <div class="accordion-content">
+                <div class="bar-content">
                     <table>
                         <tr>
                             <td>Marcus Popov</td>
@@ -68,12 +69,15 @@
                 </div>
             </div>
             <div class="accordion-bar">
-                <div class="accordion-header clearfix">
+                <div class="bar-header clearfix">
                     <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">Kategorie: <span class="category-name">1a</span></h4>
-                    <h4 class="category-properties"><span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span></h4>
+                    <h4 class="category">
+                        Kategorie:
+                        <span class="category-name">1a</span>
+                        <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
+                    </h4>
                 </div>
-                <div class="accordion-content">
+                <div class="bar-content">
                     <table>
                         <tr>
                             <td>Marcus Popov</td>
@@ -103,12 +107,15 @@
                 </div>
             </div>
             <div class="accordion-bar">
-                <div class="accordion-header clearfix">
+                <div class="bar-header clearfix">
                     <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">Kategorie: <span class="category-name">1a</span></h4>
-                    <h4 class="category-properties"><span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span></h4>
+                    <h4 class="category">
+                        Kategorie:
+                        <span class="category-name">1a</span>
+                        <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
+                    </h4>
                 </div>
-                <div class="accordion-content">
+                <div class="bar-content">
                     <table>
                         <tr>
                             <td>Marcus Popov</td>
@@ -138,12 +145,15 @@
                 </div>
             </div>
             <div class="accordion-bar">
-                <div class="accordion-header clearfix">
+                <div class="bar-header clearfix">
                     <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">Kategorie: <span class="category-name">1a</span></h4>
-                    <h4 class="category-properties"><span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span></h4>
+                    <h4 class="category">
+                        Kategorie:
+                        <span class="category-name">1a</span>
+                        <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
+                    </h4>
                 </div>
-                <div class="accordion-content">
+                <div class="bar-content">
                     <table>
                         <tr>
                             <td>Marcus Popov</td>
@@ -173,12 +183,15 @@
                 </div>
             </div>
             <div class="accordion-bar">
-                <div class="accordion-header clearfix">
+                <div class="bar-header clearfix">
                     <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">Kategorie: <span class="category-name">1a</span></h4>
-                    <h4 class="category-properties"><span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span></h4>
+                    <h4 class="category">
+                        Kategorie:
+                        <span class="category-name">1a</span>
+                        <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
+                    </h4>
                 </div>
-                <div class="accordion-content">
+                <div class="bar-content">
                     <table>
                         <tr>
                             <td>Marcus Popov</td>
@@ -208,12 +221,15 @@
                 </div>
             </div>
             <div class="accordion-bar">
-                <div class="accordion-header clearfix">
+                <div class="bar-header clearfix">
                     <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">Kategorie: <span class="category-name">1a</span></h4>
-                    <h4 class="category-properties"><span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span></h4>
+                    <h4 class="category">
+                        Kategorie:
+                        <span class="category-name">1a</span>
+                        <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
+                    </h4>
                 </div>
-                <div class="accordion-content">
+                <div class="bar-content">
                     <table>
                         <tr>
                             <td>Marcus Popov</td>
@@ -247,12 +263,15 @@
         <h3>Kumite</h3>
         <div class="accordion">
             <div class="accordion-bar">
-                <div class="accordion-header clearfix">
+                <div class="bar-header clearfix">
                     <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">Kategorie: <span class="category-name">1a</span></h4>
-                    <h4 class="category-properties"><span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span></h4>
+                    <h4 class="category">
+                        Kategorie:
+                        <span class="category-name">1a</span>
+                        <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
+                    </h4>
                 </div>
-                <div class="accordion-content">
+                <div class="bar-content">
                     <table>
                         <tr>
                             <td>Marcus Popov</td>
@@ -282,12 +301,15 @@
                 </div>
             </div>
             <div class="accordion-bar">
-                <div class="accordion-header clearfix">
+                <div class="bar-header clearfix">
                     <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">Kategorie: <span class="category-name">1a</span></h4>
-                    <h4 class="category-properties"><span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span></h4>
+                    <h4 class="category">
+                        Kategorie:
+                        <span class="category-name">1a</span>
+                        <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
+                    </h4>
                 </div>
-                <div class="accordion-content">
+                <div class="bar-content">
                     <table>
                         <tr>
                             <td>Marcus Popov</td>
@@ -317,12 +339,15 @@
                 </div>
             </div>
             <div class="accordion-bar">
-                <div class="accordion-header clearfix">
+                <div class="bar-header clearfix">
                     <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">Kategorie: <span class="category-name">1a</span></h4>
-                    <h4 class="category-properties"><span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span></h4>
+                    <h4 class="category">
+                        Kategorie:
+                        <span class="category-name">1a</span>
+                        <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
+                    </h4>
                 </div>
-                <div class="accordion-content">
+                <div class="bar-content">
                     <table>
                         <tr>
                             <td>Marcus Popov</td>
@@ -352,12 +377,15 @@
                 </div>
             </div>
             <div class="accordion-bar">
-                <div class="accordion-header clearfix">
+                <div class="bar-header clearfix">
                     <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">Kategorie: <span class="category-name">1a</span></h4>
-                    <h4 class="category-properties"><span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span></h4>
+                    <h4 class="category">
+                        Kategorie:
+                        <span class="category-name">1a</span>
+                        <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
+                    </h4>
                 </div>
-                <div class="accordion-content">
+                <div class="bar-content">
                     <table>
                         <tr>
                             <td>Marcus Popov</td>
@@ -388,39 +416,6 @@
             </div>
         </div>
     </main>
-
-    <div class="carousel-container embla">
-        <div class="page-wrapper">
-            <div class="page1 page">
-                <h3>Tafelsystem</h3>
-                <a class="button1" href="#">Wählen</a>
-            </div>
-            <div class="page2 page">
-                <h3>Doppel-KO-System mit finalen Tafeln</h3>
-                <a class="button1" href="#">Wählen</a>
-            </div>
-            <div class="page3 page">
-                <h3>Doppel-KO-System</h3>
-                <a class="button1" href="#">Wählen</a>
-            </div>
-            <div class="page4 page">
-                <h3>KO-System</h3>
-                <a class="button1" href="#">Wählen</a>
-            </div>
-            <div class="page5 page">
-                <h3>KO-System mit finalen Tafeln</h3>
-                <a class="button1" href="#">Wählen</a>
-            </div>
-            <div class="page">
-                <h3>Jeder-Gegen-Jeden</h3>
-                <a class="button1" href="#">Wählen</a>
-            </div>
-            <div class="page">
-                <h3>Brasilianisches KO-System</h3>
-                <a class="button1" href="#">Wählen</a>
-            </div>
-        </div>
-    </div>
 
 </body>
 </html>
