Finished designing Fight Map

--- a/Frontend/fight-map/fight-map.html
+++ b/Frontend/fight-map/fight-map.html
@@ -15,8 +15,10 @@
     <script src="/SV-Tora/js/html5shiv.js"></script>
     <![endif]-->
 
+    <!-- TODO: Activate
     <script src="js/jquery.min.js"></script>
     <script src="js/tilt.jquery.js"></script>
+    -->
     <script src="js/fight-map.js"></script>
     <!--
 
@@ -86,51 +88,197 @@
             </div>
             <div class="column">
                 <div class="fight">
-                    <span class="fighter-name">Marcus</span>
-                    <span class="fighter-name">Markus</span>
+                    <span class="fighter-name"></span>
+                    <span class="fighter-name"></span>
                     <span class="fight-number">9</span>
                 </div>
                 <div class="fight">
-                    <span class="fighter-name">Marcus</span>
-                    <span class="fighter-name">Markus</span>
+                    <span class="fighter-name"></span>
+                    <span class="fighter-name"></span>
                     <span class="fight-number">10</span>
                 </div>
                 <div class="fight">
-                    <span class="fighter-name">Marcus</span>
-                    <span class="fighter-name">Markus</span>
+                    <span class="fighter-name"></span>
+                    <span class="fighter-name"></span>
                     <span class="fight-number">11</span>
                 </div>
                 <div class="fight">
-                    <span class="fighter-name">Marcus</span>
-                    <span class="fighter-name">Markus</span>
+                    <span class="fighter-name"></span>
+                    <span class="fighter-name"></span>
                     <span class="fight-number">12</span>
                 </div>
             </div>
             <div class="column">
                 <div class="fight">
-                    <span class="fighter-name">Marcus</span>
-                    <span class="fighter-name">Markus</span>
+                    <span class="fighter-name"></span>
+                    <span class="fighter-name"></span>
                     <span class="fight-number">13</span>
                 </div>
                 <div class="fight">
-                    <span class="fighter-name">Marcus</span>
-                    <span class="fighter-name">Markus</span>
+                    <span class="fighter-name"></span>
+                    <span class="fighter-name"></span>
                     <span class="fight-number">14</span>
                 </div>
             </div>
             <div class="column">
                 <div class="fight">
-                    <span class="fighter-name">Marcus</span>
-                    <span class="fighter-name">Markus</span>
+                    <span class="fighter-name"></span>
+                    <span class="fighter-name"></span>
                     <span class="fight-number">15</span>
                 </div>
             </div>
             <div class="column">
                 <div class="fight winner">
-                    <span class="fighter-name">Markus</span>
+                    <span class="fighter-name last"></span>
                 </div>
             </div>
         </div>
+
+        <div class="winners">
+            <span class="first">Markus<span class="origin">(Gewinner aus Kampf 15)</span></span>
+            <span class="second">Markus<span class="origin">(Verlierer aus Kampf 15)</span></span>
+            <span class="third">Marcus<span class="origin">(Gewinner aus Kampf 16)</span></span>
+        </div>
+
+        <div class="tafeln">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Teilnehmer</th>
+                        <th class="points">1</th>
+                        <th class="points">2</th>
+                        <th class="points">3</th>
+                        <th class="points">4</th>
+                        <th class="points">5</th>
+                        <th class="points">6</th>
+                        <th class="points">7</th>
+                        <th class="points">Gesamt</th>
+                        <th>Platzierung</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Markus</td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"></td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <td>Marcus</td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Flori</td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Jörg</td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Meister</td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>The Rock</td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"></td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="dog-eat-dog clearfix">
+            <table class="participants">
+                <thead>
+                    <tr>
+                        <th>Teilnehmer</th>
+                        <th>Gewonnen</th>
+                        <th>Verloren</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Markus</td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                    </tr>
+                    <tr>
+                        <td>Marcus</td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                    </tr>
+                    <tr>
+                        <td>Flori</td>
+                        <td class="points"><input type="text" /></td>
+                        <td class="points"><input type="text" /></td>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="fight-order">
+                <div class="fight">
+                    <span class="fighter">Markus</span>
+                    <span class="position">1.</span>
+                    <span class="fighter">Marcus</span>
+                </div>
+                <div class="fight">
+                    <span class="fighter">Markus</span>
+                    <span class="position">2.</span>
+                    <span class="fighter">Flori</span>
+                </div>
+                <div class="fight">
+                    <span class="fighter">Marcus</span>
+                    <span class="position">3.</span>
+                    <span class="fighter">Flori</span>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <div class="map-controls">
