Finished designing club detail card

--- a/Frontend/vertical-card/vertical-card.html
+++ b/Frontend/vertical-card/vertical-card.html
@@ -26,10 +26,7 @@
 
     <main class="clearfix">
         <div class="col">
-            <a class="vertical-card" href="#">
-                <p class="bg-text">
-                    Personen
-                </p>
+            <a data-bg="Personen" class="vertical-card" href="#">
                 <h3 class="district">
                     Personen
                 </h3>
@@ -37,10 +34,7 @@
                     513
                 </span>
             </a>
-            <a class="vertical-card" href="#">
-                <p class="bg-text">
-                    Teams
-                </p>
+            <a data-bg="Teams" class="vertical-card" href="#">
                 <h3 class="district">
                     Teams
                 </h3>
@@ -48,10 +42,7 @@
                     107
                 </span>
             </a>
-            <a class="vertical-card" href="#">
-                <p class="bg-text">
-                    Vereine
-                </p>
+            <a data-bg="Vereine" class="vertical-card" href="#">
                 <h3 class="district">
                     Vereine
                 </h3>
