Finished carousels (for now)

--- a/Frontend/carousels/carousels.html
+++ b/Frontend/carousels/carousels.html
@@ -15,8 +15,6 @@
     <script src="/SV-Tora/js/html5shiv.js"></script>
     <![endif]-->
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/tilt.jquery.js"></script>
     <script src="js/carousels.js"></script>
     <!--
 
@@ -27,7 +25,66 @@
 </head>
 <body class="darkmode">
 
-    
+    <div class="carousel-container">
+        <div class="page-wrapper">
+            <div class="page">
+                <h3>Tafelsystem</h3>
+                <a class="secondary-button" href="#">
+                    <span class="text">
+                        Wählen
+                    </span>
+                </a>
+            </div>
+            <div class="page">
+                <h3>Doppel-KO-System mit finalen Tafeln</h3>
+                <a class="secondary-button" href="#">
+                    <span class="text">
+                        Wählen
+                    </span>
+                </a>
+            </div>
+            <div class="page">
+                <h3>Doppel-KO-System</h3>
+                <a class="secondary-button" href="#">
+                    <span class="text">
+                        Wählen
+                    </span>
+                </a>
+            </div>
+            <div class="page">
+                <h3>KO-System</h3>
+                <a class="secondary-button" href="#">
+                    <span class="text">
+                        Wählen
+                    </span>
+                </a>
+            </div>
+            <div class="page">
+                <h3>KO-System mit finalen Tafeln</h3>
+                <a class="secondary-button" href="#">
+                    <span class="text">
+                        Wählen
+                    </span>
+                </a>
+            </div>
+            <div class="page">
+                <h3>Jeder-Gegen-Jeden</h3>
+                <a class="secondary-button" href="#">
+                    <span class="text">
+                        Wählen
+                    </span>
+                </a>
+            </div>
+            <div class="page">
+                <h3>Brasilianisches KO-System</h3>
+                <a class="secondary-button" href="#">
+                    <span class="text">
+                        Wählen
+                    </span>
+                </a>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
