Did a whole bunch of stuff not only tables

--- a/Frontend/accordion/accordion.html
+++ b/Frontend/accordion/accordion.html
@@ -38,6 +38,24 @@
                         <span class="category-name">1a</span>
                         <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
                     </h4>
+                    <div class="tools">
+                        <a class="primary-button tool print" href="#">
+                            <i class="material-icons">print</i>
+                            <p>Drucken</p>
+                        </a>
+                        <a class="primary-button tool edit" href="#">
+                            <i class="material-icons">create</i>
+                            <p>Umbenennen</p>
+                        </a>
+                        <a class="primary-button tool split" href="#">
+                            <i class="material-icons">call_split</i>
+                            <p>Splitten</p>
+                        </a>
+                        <a class="primary-button tool merge" href="#">
+                            <i class="material-icons">merge_type</i>
+                            <p>Mergen</p>
+                        </a>
+                    </div>
                 </div>
                 <div class="bar-content">
                     <table>
@@ -76,6 +94,24 @@
                         <span class="category-name">1a</span>
                         <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
                     </h4>
+                    <div class="tools">
+                        <a class="primary-button tool print" href="#">
+                            <i class="material-icons">print</i>
+                            <p>Drucken</p>
+                        </a>
+                        <a class="primary-button tool edit" href="#">
+                            <i class="material-icons">create</i>
+                            <p>Umbenennen</p>
+                        </a>
+                        <a class="primary-button tool split" href="#">
+                            <i class="material-icons">call_split</i>
+                            <p>Splitten</p>
+                        </a>
+                        <a class="primary-button tool merge" href="#">
+                            <i class="material-icons">merge_type</i>
+                            <p>Mergen</p>
+                        </a>
+                    </div>
                 </div>
                 <div class="bar-content">
                     <table>
@@ -114,6 +150,24 @@
                         <span class="category-name">1a</span>
                         <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
                     </h4>
+                    <div class="tools">
+                        <a class="primary-button tool print" href="#">
+                            <i class="material-icons">print</i>
+                            <p>Drucken</p>
+                        </a>
+                        <a class="primary-button tool edit" href="#">
+                            <i class="material-icons">create</i>
+                            <p>Umbenennen</p>
+                        </a>
+                        <a class="primary-button tool split" href="#">
+                            <i class="material-icons">call_split</i>
+                            <p>Splitten</p>
+                        </a>
+                        <a class="primary-button tool merge" href="#">
+                            <i class="material-icons">merge_type</i>
+                            <p>Mergen</p>
+                        </a>
+                    </div>
                 </div>
                 <div class="bar-content">
                     <table>
@@ -152,6 +206,24 @@
                         <span class="category-name">1a</span>
                         <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
                     </h4>
+                    <div class="tools">
+                        <a class="primary-button tool print" href="#">
+                            <i class="material-icons">print</i>
+                            <p>Drucken</p>
+                        </a>
+                        <a class="primary-button tool edit" href="#">
+                            <i class="material-icons">create</i>
+                            <p>Umbenennen</p>
+                        </a>
+                        <a class="primary-button tool split" href="#">
+                            <i class="material-icons">call_split</i>
+                            <p>Splitten</p>
+                        </a>
+                        <a class="primary-button tool merge" href="#">
+                            <i class="material-icons">merge_type</i>
+                            <p>Mergen</p>
+                        </a>
+                    </div>
                 </div>
                 <div class="bar-content">
                     <table>
@@ -190,6 +262,24 @@
                         <span class="category-name">1a</span>
                         <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
                     </h4>
+                    <div class="tools">
+                        <a class="primary-button tool print" href="#">
+                            <i class="material-icons">print</i>
+                            <p>Drucken</p>
+                        </a>
+                        <a class="primary-button tool edit" href="#">
+                            <i class="material-icons">create</i>
+                            <p>Umbenennen</p>
+                        </a>
+                        <a class="primary-button tool split" href="#">
+                            <i class="material-icons">call_split</i>
+                            <p>Splitten</p>
+                        </a>
+                        <a class="primary-button tool merge" href="#">
+                            <i class="material-icons">merge_type</i>
+                            <p>Mergen</p>
+                        </a>
+                    </div>
                 </div>
                 <div class="bar-content">
                     <table>
@@ -228,6 +318,24 @@
                         <span class="category-name">1a</span>
                         <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
                     </h4>
+                    <div class="tools">
+                        <a class="primary-button tool print" href="#">
+                            <i class="material-icons">print</i>
+                            <p>Drucken</p>
+                        </a>
+                        <a class="primary-button tool edit" href="#">
+                            <i class="material-icons">create</i>
+                            <p>Umbenennen</p>
+                        </a>
+                        <a class="primary-button tool split" href="#">
+                            <i class="material-icons">call_split</i>
+                            <p>Splitten</p>
+                        </a>
+                        <a class="primary-button tool merge" href="#">
+                            <i class="material-icons">merge_type</i>
+                            <p>Mergen</p>
+                        </a>
+                    </div>
                 </div>
                 <div class="bar-content">
                     <table>
@@ -270,6 +378,24 @@
                         <span class="category-name">1a</span>
                         <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
                     </h4>
+                    <div class="tools">
+                        <a class="primary-button tool print" href="#">
+                            <i class="material-icons">print</i>
+                            <p>Drucken</p>
+                        </a>
+                        <a class="primary-button tool edit" href="#">
+                            <i class="material-icons">create</i>
+                            <p>Umbenennen</p>
+                        </a>
+                        <a class="primary-button tool split" href="#">
+                            <i class="material-icons">call_split</i>
+                            <p>Splitten</p>
+                        </a>
+                        <a class="primary-button tool merge" href="#">
+                            <i class="material-icons">merge_type</i>
+                            <p>Mergen</p>
+                        </a>
+                    </div>
                 </div>
                 <div class="bar-content">
                     <table>
@@ -308,6 +434,24 @@
                         <span class="category-name">1a</span>
                         <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
                     </h4>
+                    <div class="tools">
+                        <a class="primary-button tool print" href="#">
+                            <i class="material-icons">print</i>
+                            <p>Drucken</p>
+                        </a>
+                        <a class="primary-button tool edit" href="#">
+                            <i class="material-icons">create</i>
+                            <p>Umbenennen</p>
+                        </a>
+                        <a class="primary-button tool split" href="#">
+                            <i class="material-icons">call_split</i>
+                            <p>Splitten</p>
+                        </a>
+                        <a class="primary-button tool merge" href="#">
+                            <i class="material-icons">merge_type</i>
+                            <p>Mergen</p>
+                        </a>
+                    </div>
                 </div>
                 <div class="bar-content">
                     <table>
@@ -346,6 +490,24 @@
                         <span class="category-name">1a</span>
                         <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
                     </h4>
+                    <div class="tools">
+                        <a class="primary-button tool print" href="#">
+                            <i class="material-icons">print</i>
+                            <p>Drucken</p>
+                        </a>
+                        <a class="primary-button tool edit" href="#">
+                            <i class="material-icons">create</i>
+                            <p>Umbenennen</p>
+                        </a>
+                        <a class="primary-button tool split" href="#">
+                            <i class="material-icons">call_split</i>
+                            <p>Splitten</p>
+                        </a>
+                        <a class="primary-button tool merge" href="#">
+                            <i class="material-icons">merge_type</i>
+                            <p>Mergen</p>
+                        </a>
+                    </div>
                 </div>
                 <div class="bar-content">
                     <table>
@@ -384,6 +546,24 @@
                         <span class="category-name">1a</span>
                         <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
                     </h4>
+                    <div class="tools">
+                        <a class="primary-button tool print" href="#">
+                            <i class="material-icons">print</i>
+                            <p>Drucken</p>
+                        </a>
+                        <a class="primary-button tool edit" href="#">
+                            <i class="material-icons">create</i>
+                            <p>Umbenennen</p>
+                        </a>
+                        <a class="primary-button tool split" href="#">
+                            <i class="material-icons">call_split</i>
+                            <p>Splitten</p>
+                        </a>
+                        <a class="primary-button tool merge" href="#">
+                            <i class="material-icons">merge_type</i>
+                            <p>Mergen</p>
+                        </a>
+                    </div>
                 </div>
                 <div class="bar-content">
                     <table>
