--- a/Frontend/material-inputs/material-inputs.html
+++ b/Frontend/material-inputs/material-inputs.html
@@ -93,6 +93,14 @@
     </div>
 
     <div class="container">
+        <label for="file-input" class="file-input-container">
+            <input type="file" name="file-input" value="value" id="file-input" />
+            <i class="material-icons">publish</i>
+            <span class="file-name">Datei auswählen</span>
+        </label>
+    </div>
+
+    <div class="container">
         <textarea placeholder="Deine Nachricht..."></textarea>
     </div>
 
