--- a/Frontend/messages/messages.html
+++ b/Frontend/messages/messages.html
@@ -57,7 +57,7 @@
             <div class="message">
                 <p class="time">15.11.2020 12:36</p>
                 <p class="sender">System</p>
-                <div class="notification clearfix">
+                <div class="notification interactive clearfix">
                     <i class="material-icons symbol">info</i>
                     <p class="message">Irgendetwas super duper mega krass wichtiges!</p>
                 </div>
