--- a/Frontend/notification/notification.html
+++ b/Frontend/notification/notification.html
@@ -26,8 +26,8 @@
 </head>
 <body class="darkmode">
 
-    <div class="notification clearfix">
-        <i class="material-icons symbol">warning<!-- info --></i>
+    <div class="notification hoverable clearfix">
+        <i class="material-icons warning symbol">warning<!-- info --></i>
         <p class="message">Irgendetwas super duper mega krass wichtiges!</p>
         <i class="material-icons close">close</i>
     </div>
